--- a/src/main/resources/soap_request.vm
+++ b/src/main/resources/soap_request.vm
@@ -1,10 +1,10 @@
 <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:v1="http://caelum.com.br/estoquews/v1">
    <soapenv:Header>
-      <v1:tokenUsuario>${headers.tokenUser}</v1:tokenUsuario>
+      <v1:tokenUsuario>${headers.tokenAutorizacao}</v1:tokenUsuario>
    </soapenv:Header>
    <soapenv:Body>
-      <v1:ItensPeloCodigo>
+      <v1:Itens>
          <codigo>${body}</codigo>
-      </v1:ItensPeloCodigo>
+      </v1:Itens>
    </soapenv:Body>
 </soapenv:Envelope>
